# biocli

./: .gitignore  LICENSE  README.md
.github/workflows/: blank.yml  main.yml
current/: BIOPIPE.md  CHANGELOG.md  Makefile  PLUGIN_GUIDE.md  SECURITY.md  SECURITY_AUDIT.md  pyproject.toml
current/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
current/.github/workflows/: publish.yml
current/plugins/biopipe_wasm_demo/: manifest.json
current/scripts/: run_red_team.sh  security_gate.py
current/src/biopipe/: cli.py  repl.py  setup_wizard.py
current/src/biopipe/capacity/: __init__.py  planner.py
current/src/biopipe/collab/: team_config.py
current/src/biopipe/containers/: __init__.py  manager.py
current/src/biopipe/core/: __init__.py  audit.py  config.py  critic.py  dag_parser.py  errors.py  hooks.py  loop.py  plugin_sdk.py  privacy.py  safety.py  session.py  shell_tool.py  task_decomposer.py  tool_scheduler.py  types.py  ui.py
current/src/biopipe/datasets/: __init__.py  sra_fetcher.py
current/src/biopipe/genomes/: __init__.py  manager.py
current/src/biopipe/hpc/: __init__.py  cluster_profiler.py  job_monitor.py  slurm_generator.py
current/src/biopipe/llm/: base.py  llamacpp_embedded.py  ollama.py  prompts.py
current/src/biopipe/pipelines/: __init__.py  nextflow_builder.py  snakemake_builder.py
current/src/biopipe/rag/: __init__.py  poison_detector.py
current/src/biopipe/tools/: __init__.py  file_read.py  shell_exec.py  web_fetch.py
current/tests/: conftest.py  test_agent.py  test_core.py  test_file_read_tool.py  test_new_modules.py  test_phase4_phase5.py  test_safety.py  test_security_hardening.py  test_wasm_sandbox.py
versions/v0.4.0/: PROJECT_CONTEXT.md  README.md  pyproject.toml
versions/v0.4.0/plugins/biopipe_plugin_ngs/: setup.py
versions/v0.4.0/plugins/biopipe_plugin_ngs/biopipe_plugin_ngs/: __init__.py  main.py
versions/v0.4.0/plugins/biopipe_plugin_ngs/biopipe_plugin_ngs.egg-info/: PKG-INFO  SOURCES.txt
versions/v0.4.0/src/biopipe/: cli.py  repl.py
versions/v0.4.0/src/biopipe/core/: error_recovery.py  logger.py  loop.py  path_validator.py  plugin_sdk.py  runtime.py  system_profiler.py  tool_selection.py
versions/v0.4.0/src/biopipe/llm/: openai_compatible.py
versions/v0.4.0/src/biopipe/rag/: indexer.py
versions/v0.4.0/tests/: test_e2e.py
versions/v0.5.0-enterprise/: AUDIT_MESSAGE.md
versions/v0.5.0-enterprise/plugins/biopipe_plugin_ngs/: manifest.json
versions/v0.5.0-enterprise/src/biopipe/: cli.py  repl.py  setup_wizard.py
versions/v0.5.0-enterprise/tests/: redteam_adapter.py  test_agent.py  test_agent_extras.py  test_e2e.py  test_full_redteam.py  test_modules.py  test_safety.py  test_security_hardening.py  test_wasm_sandbox.py
versions/v0.5.0-github-ready/: .gitignore  AUDIT_PROMPT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLUGIN_INSTALL.md  README.md  pyproject.toml
versions/v0.5.0-github-ready/.github/workflows/: ci.yml
versions/v0.5.0-github-ready/plugins/biopipe_wasm_demo/: plugin.wat
versions/v0.5.0-github-ready/src/biopipe/: __init__.py  cli.py  setup_wizard.py
versions/v0.5.0-github-ready/src/biopipe/core/: execution.py  git_tool.py  loop.py  memory.py  multiqc_parser.py  project_context.py  rlhf.py  session.py  shell_tool.py  snapshots.py  wasm_runner.py
versions/v0.5.0-github-ready/src/biopipe/rag/: chunker.py  retriever.py
versions/v0.5.0-github-ready/tests/: test_modules.py  test_new_modules.py  test_security_hardening.py
(+26 files in other folders)
